manifests/allow-apiserver-ingress.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-apiserver-ingress
spec:
  endpointSelector:
    matchLabels:
      'reserved:kube-apiserver': ''
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
