manifests/cilium-ingress.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cilium-ingress
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      k8s-app: cilium
  ingress:
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "4244"
              protocol: TCP
