manifests/coredns-egress.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: coredns-egress
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      k8s-app: kube-dns
  egress:
    - toEndpoints:
        - matchLabels:
            'reserved:kube-apiserver': ''
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
